URL Request Reponse继承
Change-Id: I5cfd3bd9001e68faaec1b2a29e961a64bca0d890

--- a/build.gradle
+++ b/build.gradle
@@ -100,57 +100,77 @@ javaweb {
     zipDependencies=[
             wxpay:"https://pay.weixin.qq.com/wiki/doc/api/download/WxPayAPI_JAVA.zip",
     ]
-    jsDependencies=[
-//            axios:"https://unpkg.com/axios/dist/axios.js",
-//            vue:"https://cdn.jsdelivr.net/npm/vue/dist/vue.js",
-//            jquery:"http://code.jquery.com/jquery-3.3.1.js",
-//            echarts:"http://echarts.baidu.com/dist/echarts3/echarts.js",
-//            d3:"https://github.com/d3/d3/releases/download/v5.7.0/d3.zip",
-//            //d3 IE8兼容库
-//            aight:"https://raw.githubusercontent.com/shawnbot/aight/master/aight.js",
-//            'nwmatcher':'https://raw.githubusercontent.com/dperini/nwmatcher/master/src/nwmatcher.js',
-//            "modernizr":"http://modernizr.cn/e1d69a6f-e230-4d11-b88b-2595cefd32d2",
-//            jquery:"http://code.jquery.com/jquery-1.9.1.js",
-//            "jquery-migrate":"http://code.jquery.com/jquery-migrate-1.1.0.js",
-//            avalon:"https://raw.githubusercontent.com/RubyLouvre/avalon/v2.2.7/dist/avalon.js",
-//            echarts:"http://echarts.baidu.com/build/echarts-2.2.7.zip",
-            json:"http://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.js",
-            "es5-shim":"https://raw.githubusercontent.com/es-shims/es5-shim/master/es5-shim.js",
-            "es5-sham":"https://raw.githubusercontent.com/es-shims/es5-shim/master/es5-sham.js",
-            'es6-shim':'https://raw.githubusercontent.com/paulmillr/es6-shim/master/es6-shim.js',
-            'es6-collections':'https://raw.githubusercontent.com/WebReflection/es6-collections/master/index.js',
-            "history":"https://github.com/browserstate/history.js/zipball/master/",
-            'history.adapter.native':'https://raw.githubusercontent.com/browserstate/history.js/master/scripts/uncompressed/history.adapter.native.js',
-            'selectivizr':'http://selectivizr.com/downloads/selectivizr-1.0.2.zip',
-            flexibility:"https://raw.githubusercontent.com/jonathantneal/flexibility/master/flexibility.js",
-            'location-origin':'https://raw.githubusercontent.com/shinnn/location-origin.js/master/dist/location-origin.js',
-            'bluebird':'https://cdn.jsdelivr.net/bluebird/2.10.2/bluebird.js',
-            'usertiming':'https://raw.githubusercontent.com/nicjansma/usertiming.js/master/src/usertiming.js',
-            'Blob':'https://raw.githubusercontent.com/eligrey/Blob.js/master/Blob.js',
-            'FileSaver':'https://raw.githubusercontent.com/koffsyrup/FileSaver.js/master/FileSaver.js',
-            'canvas-toBlob':'https://raw.githubusercontent.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js',
-            'FormData':'https://raw.githubusercontent.com/jimmywarting/FormData/master/FormData.js',
-            /* html */
-            'placeholders':'https://raw.githubusercontent.com/jamesallardice/Placeholders.js/master/dist/placeholders.js',
-            html5shiv:"https://raw.githubusercontent.com/aFarkas/html5shiv/master/dist/html5shiv.js",
-            "html5shiv-printshiv":"https://raw.githubusercontent.com/aFarkas/html5shiv/master/dist/html5shiv-printshiv.js",
-            "mediaelement":"https://raw.githubusercontent.com/mediaelement/mediaelement/master/build/mediaelement.js",
-            'classList':'https://raw.githubusercontent.com/eligrey/classList.js/master/classList.js',
-            //css3
-            'PIE_uncompressed.htc':"http://css3pie.com/download-latest-2.x/",
-            'PIE_IE678_uncompressed':"http://css3pie.com/download-latest-2.x/",
-            'PIE_IE9_uncompressed':"http://css3pie.com/download-latest-2.x/",
-            //jquery依赖 level4
-            //'mq4-hover-shim':'https://raw.githubusercontent.com/twbs/mq4-hover-shim/master/dist/browser/mq4-hover-shim.js',
-            "respond":"https://raw.githubusercontent.com/scottjehl/Respond/master/src/respond.js",
-            'EventHelpers':'https://raw.githubusercontent.com/zoltan-dulac/cssSandpaper/master/shared/js/EventHelpers.js',
-            'cssQuery-p':'https://raw.githubusercontent.com/zoltan-dulac/cssSandpaper/master/shared/js/cssQuery-p.js',
-            'sylvester.src':'http://sylvester.jcoglan.com/assets/sylvester-0-1-3.zip',
-            'cssSandpaper':'https://raw.githubusercontent.com/zoltan-dulac/cssSandpaper/master/shared/js/cssSandpaper.js',
-            'Cango3D-8v00':'http://www.arc.id.au/Cango3D-8v00.js',
-    ]
-    swfDependencies=[
-        
+    frontendDependencies = [
+            "src/main/frontend/js/lib":[
+                    //            axios:"https://unpkg.com/axios/dist/axios.js",
+                    //            vue:"https://cdn.jsdelivr.net/npm/vue/dist/vue.js",
+                    //            jquery:"http://code.jquery.com/jquery-3.3.1.js",
+                    //            echarts:"http://echarts.baidu.com/dist/echarts3/echarts.js",
+                    //            d3:"https://github.com/d3/d3/releases/download/v5.7.0/d3.zip",
+                    //            //d3 IE8兼容库
+                    //            aight:"https://raw.githubusercontent.com/shawnbot/aight/master/aight.js",
+                    //            'nwmatcher':'https://raw.githubusercontent.com/dperini/nwmatcher/master/src/nwmatcher.js',
+                    //            "modernizr":"http://modernizr.cn/e1d69a6f-e230-4d11-b88b-2595cefd32d2",
+                    //            jquery:"http://code.jquery.com/jquery-1.9.1.js",
+                    //            "jquery-migrate":"http://code.jquery.com/jquery-migrate-1.1.0.js",
+                    //            avalon:"https://raw.githubusercontent.com/RubyLouvre/avalon/v2.2.7/dist/avalon.js",
+                    //            echarts:"http://echarts.baidu.com/build/echarts-2.2.7.zip",
+                    'json.js':"http://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.js",
+                    "es5-shim.js":"https://raw.githubusercontent.com/es-shims/es5-shim/master/es5-shim.js",
+                    "es5-sham.js":"https://raw.githubusercontent.com/es-shims/es5-shim/master/es5-sham.js",
+                    'es6-shim.js':'https://raw.githubusercontent.com/paulmillr/es6-shim/master/es6-shim.js',
+                    'es6-collections.js':'https://raw.githubusercontent.com/WebReflection/es6-collections/master/index.js',
+                    "history.js":"https://github.com/browserstate/history.js/zipball/master/",
+                    'history.adapter.native.js':'https://raw.githubusercontent.com/browserstate/history.js/master/scripts/uncompressed/history.adapter.native.js',
+                    'selectivizr.js':'http://selectivizr.com/downloads/selectivizr-1.0.2.zip',
+                    'location-origin.js':'https://raw.githubusercontent.com/shinnn/location-origin.js/master/dist/location-origin.js',
+                    'bluebird.js':'https://cdn.jsdelivr.net/bluebird/2.10.2/bluebird.js',
+                    'usertiming.js':'https://raw.githubusercontent.com/nicjansma/usertiming.js/master/src/usertiming.js',
+                    'Blob.js':'https://raw.githubusercontent.com/eligrey/Blob.js/master/Blob.js',
+                    'FileSaver.js':'https://raw.githubusercontent.com/koffsyrup/FileSaver.js/master/FileSaver.js',
+                    'canvas-toBlob.js':'https://raw.githubusercontent.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js',
+                    'FormData.js':'https://raw.githubusercontent.com/jimmywarting/FormData/master/FormData.js',
+                    'localforage.js':'https://raw.githubusercontent.com/localForage/localForage/master/dist/localforage.js',
+                    'geo.js':'https://raw.githubusercontent.com/inexorabletash/polyfill/master/geo.js',
+                    'web_socket.js':'https://raw.githubusercontent.com/gimite/web-socket-js/master/web_socket.js',
+                    'swfobject.js':'https://raw.githubusercontent.com/gimite/web-socket-js/master/src/swfobject.js',
+                    'base64.js':'https://raw.githubusercontent.com/davidchambers/Base64.js/master/base64.js',
+                    'getUserMedia.js':'https://raw.githubusercontent.com/addyosmani/getUserMedia.js/gh-pages/dist/getUserMedia.js',
+                    'typedarray.js':'https://raw.githubusercontent.com/inexorabletash/polyfill/master/typedarray.js',
+                    'MathJax.js':'https://raw.githubusercontent.com/mathjax/MathJax/master/MathJax.js',
+                    'fakeworker.js':'https://raw.githubusercontent.com/piether/fakeworker-js/master/src/javascript/fakeworker.js',
+                    'xpath.js':'http://nchc.dl.sourceforge.net/project/js-xpath/js-xpath/1.0.0/xpath.js',
+                    'wgxpath.install.js':'https://raw.githubusercontent.com/google/wicked-good-xpath/master/dist/wgxpath.install.js',
+                     'document.currentScript.js':'https://raw.githubusercontent.com/JamesMGreene/document.currentScript/master/dist/document.currentScript.js',
+                    /* html */
+                    'placeholders.js':'https://raw.githubusercontent.com/jamesallardice/Placeholders.js/master/dist/placeholders.js',
+                    "html5shiv-printshiv.js":"https://raw.githubusercontent.com/aFarkas/html5shiv/master/dist/html5shiv-printshiv.js",
+                    "mediaelement-and-player.js":"https://github.com/mediaelement/mediaelement/archive/2.23.5.zip",
+                    "jquery.js":"https://github.com/mediaelement/mediaelement/archive/2.23.5.zip",
+                    'classList.js':'https://raw.githubusercontent.com/eligrey/classList.js/master/classList.js',
+                    'sendbeacon.js':'https://raw.githubusercontent.com/miguelmota/Navigator.sendBeacon/master/sendbeacon.js',
+                    //css3
+                    'PIE_uncompressed.htc':"http://css3pie.com/download-latest-2.x/",
+                    'PIE_IE678_uncompressed.js':"http://css3pie.com/download-latest-2.x/",
+                    'PIE_IE9_uncompressed.js':"http://css3pie.com/download-latest-2.x/",
+                    //jquery依赖 level4
+                    //'mq4-hover-shim':'https://raw.githubusercontent.com/twbs/mq4-hover-shim/master/dist/browser/mq4-hover-shim.js',
+                    "respond.js":"https://raw.githubusercontent.com/scottjehl/Respond/master/src/respond.js",
+                    'EventHelpers.js':'https://raw.githubusercontent.com/zoltan-dulac/cssSandpaper/master/shared/js/EventHelpers.js',
+                    'cssQuery-p.js':'https://raw.githubusercontent.com/zoltan-dulac/cssSandpaper/master/shared/js/cssQuery-p.js',
+                    'sylvester.src.js':'http://sylvester.jcoglan.com/assets/sylvester-0-1-3.zip',
+                    'cssSandpaper.js':'https://raw.githubusercontent.com/zoltan-dulac/cssSandpaper/master/shared/js/cssSandpaper.js',
+                    //画图
+                    'Cango3D-8v00.js':'http://www.arc.id.au/Cango3D-8v00.js',
+                    'svg.js':'https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.0.12/svg.js',
+                    'svgsmil.user.js':'https://github.com/FakeSmile/FakeSmile/raw/master/smil.user.js',
+                    'raphael.no-deps.js':'https://raw.githubusercontent.com/DmitryBaranovskiy/raphael/master/raphael.no-deps.js',
+            ],
+            "src/main/frontend/swf":[
+                    'flashmediaelement.swf':'https://github.com/mediaelement/mediaelement/archive/2.23.5.zip',
+                    'WebSocketMain.swf':'https://github.com/gimite/web-socket-js/raw/master/WebSocketMain.swf',
+            ]
+
     ]
     vcsType='git'
     vcsRemotes=[remote:'ssh://git@phabricator.windfish.club:2222/diffusion/13/imassage.git']
